# 0five-type-classes

./: 0five-type-classes.cabal  README.md
src/: Lecture.hs  Lib.hs
test/: Spec.hs
